@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2019-04-27
  * Added cachelog subsystem. To use add "cachelog" : "log" to your config, or see Wing::Role::Result::CacheLog for a database log.
+ * Added "flush" to wing command cache. Only works with FastMmap and MemcachedFast.
 
 2019-04-26
  * Added a session id conflict check for better security auditing.
